--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN7842
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
-  volume: ''
+  volume:
+    442f0dc5a4854d8fa62d021fb236bd29:
+      image_group_id: I3CN7844
+      title: Volume 1 of sdom gsum 'jam dbyangs bla ma'i dgongs rgyan rtsa 'grel/
+      volume_number: 1
+      total_pages: 772
   author: ''
+ebook_metadata:
+  title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
+  author: ''
+  sku: P008012
+  cover: cover.jpg
+  layers:
+  - pagination
