--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P008012
+id: P008012
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN7842
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
-  volume:
+  author: ''
+  volumes:
     442f0dc5a4854d8fa62d021fb236bd29:
       image_group_id: I3CN7844
       title: Volume 1 of sdom gsum 'jam dbyangs bla ma'i dgongs rgyan rtsa 'grel/
       volume_number: 1
       total_pages: 772
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
   author: ''
