--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
   author: ''
   volumes:
-    442f0dc5a4854d8fa62d021fb236bd29:
+    be17e2c2207e49caae6ffb48e2d72ad0:
       image_group_id: I3CN7844
-      title: Volume 1 of sdom gsum 'jam dbyangs bla ma'i dgongs rgyan rtsa 'grel/
+      title: ''
       volume_number: 1
       total_pages: 772
-      base_file: v001.txt
 ebook_metadata:
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
   author: ''
