Revert "volumes of meta updated"
This reverts commit 98a88202fa975fa6af1065160f48660e214a0da7.

--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -5,11 +5,12 @@ source_metadata:
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
   author: ''
   volumes:
-    be17e2c2207e49caae6ffb48e2d72ad0:
+    442f0dc5a4854d8fa62d021fb236bd29:
       image_group_id: I3CN7844
-      title: ''
+      title: Volume 1 of sdom gsum 'jam dbyangs bla ma'i dgongs rgyan rtsa 'grel/
       volume_number: 1
       total_pages: 772
+      base_file: v001.txt
 ebook_metadata:
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
   author: ''
