--- a/P008012.opf/layers/v001/Pagination.yml
+++ b/P008012.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e312d26ce4e749f39de5b972467c4838
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   55e053c27345461d984624cb52b79a04:
