added created_at and last_modified_at in metadata

--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P008012
 initial_creation_type: ocr
+created_at: 24/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W3CN7842
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 772
       base_file: v001.txt
-ebook_metadata:
-  title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
-  author: ''
-  sku: P008012
-  cover: cover.jpg
-  layers:
-  - pagination
