--- a/P008012.opf/meta.yml
+++ b/P008012.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P008012
 initial_creation_type: ocr
 created_at: 24/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:55:21.367863
 source_metadata:
   id: bdr:W3CN7842
   title: སྡོམ་གསུམ་འཇམ་དབྱངས་བླ་མའི་དགོངས་རྒྱན་རྩ་འགྲེལ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 772
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
